# Kumails-PortFolio

./: .gitignore  .replit  FEATURES.md  IMPLEMENTATION_SUMMARY.md  MODERN_UI_FEATURES.md  README.md  Readme.md  main.py  pyproject.toml  requirements.txt
MedCore-HMS/: .gitignore  README.md  main.py  seed_data.py
MedCore-HMS/attached_assets/: replit_1760551238009.md
MedCore-HMS/config/: config.py
MedCore-HMS/models/: __init__.py  activity_log.py  department.py  medication.py  patient.py  room.py  treatment.py  user.py  vital_sign.py
MedCore-HMS/routes/: auth.py  dashboard.py  hospital.py  medical_records.py  patients.py
MedCore-HMS/templates/auth/: login.html
MedCore-HMS/templates/base/: layout.html
MedCore-HMS/templates/dashboard/: index.html
finance_app/: DOCUMENTATION_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  demo_modern_ui.py  main.py  run.py  verify_install.py
finance_app/db/: context.py  init_db.py  session.py
finance_app/models/: base.py  models.py
finance_app/sample_data/: bank_statement_1.csv  bank_statement_2.csv
finance_app/services/: importer.py  posting_generator.py  reports.py  rules_engine.py
finance_app/views/: chart_window.py  dashboard.py  import_wizard.py  main_window.py  modern_styles.py  reports.py  rules.py  transactions.py
output/: cleaned_sales.csv  sales_data.db
pipeline/: etl_pipeline.py
sales-data-pipeline/data/: raw_sales.csv
sales-data-pipeline/output/: daily_sales.csv  sales_summary.csv
sql/: analytics_queries.sql
